Updated to run on JDK19